add_library(gpio_driver INTERFACE)

target_include_directories(gpio_driver INTERFACE
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

target_compile_features(gpio_driver INTERFACE
    cxx_std_20
)

# Platform-specific definitions
if (PLATFORM STREQUAL "stm32f1")
    target_link_libraries(gpio_driver INTERFACE
        platform_config
        stm32f1_cmsis
    )
elseif (PLATFORM STREQUAL "stm32f3")
    target_link_libraries(gpio_driver INTERFACE
        platform_config
        stm32f3_cmsis
    )
elseif (PLATFORM STREQUAL "stm32f7")
    target_link_libraries(gpio_driver INTERFACE
        platform_config
        stm32f7_cmsis
    )
endif()

if (BUILD_TESTS AND PLATFORM STREQUAL "host")
    add_subdirectory(tests)
endif()

if (NOT PLATFORM STREQUAL "host" AND CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
    add_library(gpio_compile_check OBJECT
        ${CMAKE_CURRENT_LIST_DIR}/tests/compile_check.cpp
    )

    target_link_libraries(gpio_compile_check PRIVATE
        gpio_driver
    )
endif()